--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <select class="breed-select"></select>
+    <select class="breed-select" id="ace"></select>
     <p class="loader js-hidden">Loading data, please wait...</p>
     <p class="error js-hidden">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
